# leftwm-theme

./: .gitignore  Cargo.toml  README-2-.md  README.md
.github/workflows/: ci.yml  release.yml
src/: errors.rs  main.rs
src/functions/: add.rs  apply.rs  install.rs  list.rs  mod.rs  new.rs  remove.rs  search.rs  set.rs  uninstall.rs  update.rs  upgrade.rs
src/models/: config.rs  leftwm.rs  mod.rs  theme.rs
src/operations/: apply.rs  autofind.rs  current.rs  install.rs  list.rs  migrate_toml_to_ron.rs  mod.rs  new.rs  search.rs  status.rs  support.rs  uninstall.rs  update.rs  upgrade.rs
src/utils/: dir.rs  merge.rs  mod.rs  read.rs  versions.rs
