[package]
name = "leftwm-theme"
version = "0.1.2-git"
authors = ["Lex Childs <lexchilds@gmail.com>", "Hitesh Paul <git@hiteshpaul.com>", "Mautamu <mautam@usa.com>"]
description = "A theme mangager for LeftWM"
edition = "2018"
keywords = ["leftwm", "wm", "theme"]
license = "MIT"
repository = "https://github.com/leftwm/leftwm-theme"
readme = "README.md"
resolver="1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features=["derive"] }
colored = "2.0.0"
dirs-next = "2.0.0"
edit-distance = "2.1.0"
fuzzy-matcher = "0.3.7"
git2 = {version = "0.18", features=["vendored-libgit2"]}
leftwm-core = "0.5"
log = "0.4"
pretty_env_logger = "0.5.0"
regex = "1.5.4"
reqwest = {version = "0.11.0", features= ["blocking", "json"]}
ron = "0.8.0"
semver = "1.0.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
tempfile = "3.2.0"
toml = "0.8"
xdg = "2.2.0"
url = "2.2.2"


[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]
